2008-08-10	v0.6.1
	fixed: awards sorting
	added: wait cursor while rendering
	changed: number of total (special) episodes were taken from mylist, not from anime
	changed: changed mylist template resulting in a bit smaller XML output file

2008-07-26	v0.6
	added: episodes summary
	added: episodes selecting with showing a selected summary
	added: hide/show options button
	changed: removed debug infos
	changed: styling for options
	changed: options selectes in CSS are now id based (new element ids introduced)
	changed: use one small image file for all awards instead of loading the awards images from anidb.net

2008-07-09	v0.5.1
	fixed: first click on name col would not start sorting descending
	added: <colgroup> to make all columns as small as possible, except the name
	added: 'Temp Rating' and 'Reviews'
	added: 'maxRows' parameter in XSL for later use
	changed: some styling
	changed: separate columns for special (watched) episodes
	changed: add doSort() via JS to all 'sortable' tags
	changed: mainLang using language ID instead of name
	changed: sort order for languages is now: japanese, english, main language (if set), all other alphabetically

2008-07-06	v0.5
	added: main language selection