@@ -1,5 +1,5 @@
 (C) 2008 by Nyxx, Styling based on "XML-Dark" template by epoximator
-Version: 0.6.1 (2008-08-10)
+Version: 0.7 (2008-08-10)
 
 Small (but growing) all-in-one list using the XSLT rendering capabilities of
 modern W3C standard compliant browsers. No (ed2k-)files or subtitle related
