@@ -50,8 +50,8 @@
 						</xsl:choose>
 						<input type="hidden" id="completeFilter" value="{$completeFilter}"/>
 					</td>
-					<td class="optionbutton" onclick="showAllDetails(true);">Show All Details</td>
-					<td class="optionbutton" onclick="showAllDetails(false);">Close All Details</td>
+					<td class="optionbutton" onclick="showAllDetails(true);">Show Details</td>
+					<td class="optionbutton" onclick="showAllDetails(false);">Close Details</td>
 				</tr>
 			</table>
 			<table width="100%" border="0" class="options">
@@ -94,7 +94,7 @@
 			<xsl:otherwise><xsl:value-of select="N"/></xsl:otherwise>
 		</xsl:choose>
 	</xsl:param>
-				<tr id="a{@i}" onclick="$('#es{@i}').toggleClass('invisible')">
+				<tr id="a{@i}" animeId="{@i}">
 					<xsl:choose>
 						<xsl:when test="$pos mod 2 = 0"><xsl:attribute name="class">even hover toggle_ep</xsl:attribute></xsl:when>
 						<xsl:otherwise><xsl:attribute name="class">odd hover toggle_ep</xsl:attribute></xsl:otherwise>
@@ -127,86 +127,12 @@
 					<td class="right">&#160;<xsl:if test="@vr &gt; 0">(<xsl:value-of select="@vr"/>)</xsl:if></td>
 					<td class="awards"><xsl:apply-templates select="W[string-length(@n) &gt; 0]"/></td>
 				</tr>
-				<xsl:call-template name="Episodes"/>
+				<tr id="es{@i}" class="invisible"></tr>
 </xsl:template>
 
 
 <xsl:template match="W">
 						<img src="anidb_award.gif" title="Award: {@n}"/>
-</xsl:template>
-
-
-<xsl:template name="Episodes">
-				<tr id="es{@i}" class="invisible">
-					<td>&#160;</td>
-					<td colspan="16" class="left">
-						<xsl:if test="count(NO) &gt; 0">
-							<table>
-								<xsl:if test="count(NO[@i=2]) &gt; 0">
-									<xsl:apply-templates select="NO[@i=2]"/>
-								</xsl:if>
-								<xsl:if test="count(NO[@i=4]) &gt; 0">
-									<xsl:apply-templates select="NO[@i=4]"/>
-								</xsl:if>
-								<xsl:if test="count(NO[@i=$mainLang and @i!=2 and @i!=4]) &gt; 0">
-									<xsl:apply-templates select="NO[@i=$mainLang]"/>
-								</xsl:if>
-								<xsl:apply-templates select="NO[@i!=2 and @i!=4 and @i!=$mainLang]">
-									<xsl:sort select="@n" data-type="text" order="ascending"/>
-								</xsl:apply-templates>
-							</table>
-						</xsl:if>
-						<table>
-							<thead>
-								<tr>
-									<th>#</th>
-									<th>Episode Title</th>
-									<th title="Length in minutes">Len</th>
-									<th title="Watched">W</th>
-								</tr>
-							</thead>
-							<tfoot>
-								<tr>
-									<th id="es{@i}_count" title="Number of episodes"><xsl:value-of select="count(E)"/></th>
-									<th id="es{@i}_comment">&#160;</th>
-									<th id="es{@i}_wtime" title="Time of watched episodes"><xsl:value-of select="sum(E[@w &gt; 0]/@l)"/></th>
-									<th id="es{@i}_wcount" title="Number of watched episodes"><xsl:value-of select="count(E[@w &gt; 0])"/></th>
-								</tr>
-							</tfoot>
-							<tbody>
-								<xsl:apply-templates select="E"/>
-							</tbody>
-						</table>
-					</td>
-				</tr>
-</xsl:template>
-
-
-<xsl:template match="E">
-	<xsl:variable name="pos" select="position()"/>
-								<tr id="e{../@i}_{@i}">
-									<xsl:choose>
-										<xsl:when test="$pos mod 2 = 0"><xsl:attribute name="class">ep even hover</xsl:attribute></xsl:when>
-										<xsl:otherwise><xsl:attribute name="class">ep odd hover</xsl:attribute></xsl:otherwise>
-									</xsl:choose>
-									<td id="e{../@i}_{@i}_num" class="right"><xsl:value-of select="@i"/></td>
-									<td id="e{../@i}_{@i}_name" class="left"><xsl:value-of select="text()"/></td>
-									<td id="e{../@i}_{@i}_len" class="right"><xsl:value-of select="@l"/> min</td>
-									<td id="e{../@i}_{@i}_w">
-										<xsl:choose>
-											<xsl:when test="@w = 0">&#160;</xsl:when>
-											<xsl:otherwise>Y</xsl:otherwise>
-										</xsl:choose>
-									</td>
-								</tr>
-</xsl:template>
-
-
-<xsl:template match="NO">
-								<tr>
-									<td class="left capitalize" onclick="doSetMainLanguage({@i})"><xsl:value-of select="@n"/>:</td>
-									<td class="left"><xsl:value-of select="text()"/></td>
-								</tr>
 </xsl:template>
 
 
